--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc && refine build",
+    "build": "refine build",
     "dev": "refine dev",
     "preview": "refine start",
     "refine": "refine"
